fixed:resources
